--- a/.github/ISSUE_TEMPLATE/watch-post.yml
+++ b/.github/ISSUE_TEMPLATE/watch-post.yml
@@ -1,28 +1,35 @@
 name: "Watch Post (スマホOK)"
-description: "新しいコレクション投稿を作る"
-title: "[Watch] "
+description: "コレクションを記事化するフォーム"
+title: "[新規投稿] "
 labels: ["post"]
 
 body:
   - type: input
     id: title
     attributes:
-      label: タイトル
-      placeholder: "例: Cyma Time-O-Vox 18K Chronomètre"
+      label: モデル名
+      description: 例: Cyma Time-O-Vox 18K Chronomètre
+      placeholder: 入力してください
     validations:
       required: true
 
   - type: textarea
-    id: content
+    id: overview
     attributes:
-      label: 内容
-      description: "本文をここに入力してください"
-      placeholder: "Markdown記法が使えます"
+      label: 概要
+      description: ブランド・キャリバー・素材など
+      placeholder: ブランド、モデル、素材、キャリバー...
     validations:
       required: true
 
-  - type: input
-    id: images
+  - type: textarea
+    id: photos
     attributes:
-      label: 画像リンク（任意）
-      placeholder: "https://..."
+      label: 写真
+      description: 画像をここにアップロードしてください
+
+  - type: textarea
+    id: comment
+    attributes:
+      label: オーナーコメント
+      description: 自由に一言をどうぞ
