--- a/.github/ISSUE_TEMPLATE/watch-post.yml
+++ b/.github/ISSUE_TEMPLATE/watch-post.yml
@@ -1,7 +1,8 @@
 name: "Watch Post (スマホOK)"
 description: "コレクションを記事化するフォーム"
-title: "[新規投稿] "
-labels: ["post"]
+title: "[新規投稿] タイトルを入力してください"
+labels: 
+  - post
 
 body:
   - type: input
