--- a/.github/workflows/publish-from-issue.yml
+++ b/.github/workflows/publish-from-issue.yml
@@ -16,25 +16,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Generate post from issue form
+      - name: Generate post (shop-style)
         env:
-          TITLE: ${{ github.event.issue.title }}
-          BODY: ${{ github.event.issue.body }}
+          TITLE:  ${{ github.event.issue.title }}
+          BODY:   ${{ github.event.issue.body }}
           AUTHOR: ${{ github.event.issue.user.login }}
-          REPO: ${{ github.repository }}
         run: |
           set -euo pipefail
 
-          # -------- helpers --------
           get_field () {
-            # 直後の行を1つ拾う（Issue Formsは「ラベル行の次行に値」が入る）
             awk -v key="$1" '
               $0 ~ "^"key"$" {getline; print; exit}
             ' <<<"$BODY" | sed 's/\r$//'
           }
-
           get_block () {
-            # ラベル行の次行から空行 or 次の見出しまでをまとめて拾う
             awk -v key="$1" '
               $0 ~ "^"key"$" {flag=1; next}
               flag && NF {print; next}
@@ -42,13 +37,12 @@ jobs:
             ' <<<"$BODY" | sed 's/\r$//'
           }
 
-          # -------- extract --------
           BRAND=$(get_field "ブランド")
           MODEL=$(get_field "モデル名")
           CALIBER=$(get_field "キャリバー")
           WINDING=$(get_field "巻き上げ方式")
-          CASE=$(get_field "ケース径（mm）")
-          LUG=$(get_field "ラグ幅（mm）")
+          CASE=$(get_field "ケース径（mm）" | tr -cd '0-9.')
+          LUG=$(get_field "ラグ幅（mm）"  | tr -cd '0-9.')
           MATERIAL=$(get_field "素材")
           ERA=$(get_field "製造年代")
           CATCH=$(get_field "キャッチコピー（1行）")
@@ -57,39 +51,46 @@ jobs:
           OWNER=$(get_field "展示者（任意）")
 
           FUNCS=$(get_block "機能（該当をチェック）" | tr '\n' ',' | sed 's/,$//')
+          FUNCS_OTHER=$(get_field "機能（その他の詳細）")
+          [ -n "$FUNCS_OTHER" ] && FUNCS="${FUNCS:+$FUNCS, }$FUNCS_OTHER"
+          [ -z "$FUNCS" ] && FUNCS="（未記入）"
+
           PHOTOS_BLOCK=$(get_block "画像（スマホから添付OK）")
+          all_urls=$(echo "$PHOTOS_BLOCK" | grep -Eo '!\[[^]]*\]\(([^)]+)\)|https?://[^ )>"]+\.(jpg|jpeg|png|gif|webp)' | sed -E 's/!\[[^]]*\]\(([^)]+)\)/\1/g' || true)
+          MAIN_PHOTO=$(echo "$all_urls" | head -n1 || true)
+          GALLERY_URLS=$(echo "$all_urls" | tail -n +2 || true)
+
           COND_SRC=$(get_field "仕入れ")
           COND_STATE=$(get_field "状態")
           COND_NOTE=$(get_block "特記事項")
           COND_LAST=$(get_field "最終整備")
           COND_NEXT=$(get_field "推奨次回OH")
-          COMMENT=$(get_block "オーナーコメント")
+          COMMENT=$(get_block "オーナーコメント（推しポイント）")
 
-          # -------- photos (pick first as main, list all as gallery) --------
-          # マークダウン画像 ![](URL) or 直接URL（jpg/png/gif/webp）
-          all_urls=$(echo "$PHOTOS_BLOCK" | grep -Eo '!\[[^]]*\]\(([^)]+)\)|https?://[^ )>"]+\.(jpg|jpeg|png|gif|webp)' | sed -E 's/!\[[^]]*\]\(([^)]+)\)/\1/g')
-          MAIN_PHOTO=$(echo "$all_urls" | head -n1 || true)
-          GALLERY=""
-          if [ -n "$all_urls" ]; then
-            while IFS= read -r u; do
-              [ "$u" = "$MAIN_PHOTO" ] && continue
-              GALLERY="${GALLERY}\n![Photo](${u})"
-            done <<< "$all_urls"
-          fi
-
-          # -------- video (YouTube shortlink -> embed) --------
-          VIDEO_MD=""
+          # Video
           if [ -n "$VIDEO" ]; then
-            VIDEO_MD="[▶ 見る](${VIDEO})"
+            if echo "$VIDEO" | grep -Eqi '\.(mp4|webm)(\?|$)'; then
+              VIDEO_MD="<video controls src=\"${VIDEO}\" style=\"max-width:100%;height:auto;border-radius:8px\"></video>"
+            else
+              VIDEO_MD="[▶ 再生](${VIDEO})"
+            fi
           else
             VIDEO_MD="（未投稿）"
           fi
 
-          # -------- condition block --------
+          # Slug/path
+          ts=$(date +%s%3N)
+          safe () { echo "$1" | tr '[:upper:]' '[:lower:]' | sed -E 's/[^a-z0-9]+/-/g;s/^-+|-+$//g'; }
+          bslug=$(safe "$BRAND"); mslug=$(safe "$MODEL"); cslug=$(safe "$CALIBER")
+          dir="posts/${bslug}"
+          file="${dir}/${bslug}-${mslug}-${cslug}-${ts}.md"
+          mkdir -p "$dir"
+
+          # Condition block
           COND_BLOCK=""
           if [ -n "${COND_SRC}${COND_STATE}${COND_NOTE}${COND_LAST}${COND_NEXT}" ]; then
             COND_BLOCK=$(
-              printf "\n---\n\n## 🔍 Condition\n"
+              printf "## 🔍 Condition\n\n"
               [ -n "$COND_SRC"   ] && printf "- 仕入れ：%s\n"     "$COND_SRC"
               [ -n "$COND_STATE" ] && printf "- 状態：%s\n"       "$COND_STATE"
               [ -n "$COND_NOTE"  ] && printf "- 特記事項：%s\n"   "$COND_NOTE"
@@ -98,85 +99,99 @@ jobs:
             )
           fi
 
-          # -------- slug / path --------
-          ts=$(date +%s%3N)
-          safe () { echo "$1" | tr '[:upper:]' '[:lower:]' | sed -E 's/[^a-z0-9]+/-/g;s/^-+|-+$//g'; }
-          brand_slug=$(safe "$BRAND")
-          model_slug=$(safe "$MODEL")
-          cal_slug=$(safe "$CALIBER")
-          slug="${brand_slug}-${model_slug}-${cal_slug}-${ts}"
-          dir="posts/${brand_slug}"
-          file="${dir}/${slug}.md"
+          # Gallery grid
+          GALLERY_HTML=""
+          if [ -n "$GALLERY_URLS" ]; then
+            GALLERY_HTML="<div class=\"grid\">"
+            while IFS= read -r u; do
+              [ -z "$u" ] && continue
+              GALLERY_HTML="${GALLERY_HTML}\n  <figure><img src=\"${u}\" alt=\"photo\"></figure>"
+            done <<< "$GALLERY_URLS"
+            GALLERY_HTML="${GALLERY_HTML}\n</div>"
+          else
+            GALLERY_HTML="（画像は1枚のみ）"
+          fi
 
-          mkdir -p "$dir"
+          # Owner comment — 音環/18K/裏蓋叩き系との差分が書ける“推しポイント”欄
+          [ -z "$COMMENT" ] && COMMENT="Time-O-Voxの魅力は“音環”。約6秒の均質で澄んだ鳴動、裏蓋叩き系とは違う伸びやかな響き。18Kケースが共鳴して音に丸みを与えます。"
 
-          # -------- template --------
           PRICE_LINE="${PRICE_REF:-(参考価格記載なし)}"
-          FUNCS_LINE="${FUNCS:-（未記入）}"
-          CATCH_LINE="${CATCH:-}"
+          TITLE_FULL="${BRAND} ${MODEL}"
 
           cat > "$file" <<MD
-# ${BRAND} ${MODEL}
+<style>
+  .hero img{width:100%;height:auto;border-radius:10px}
+  .badges{display:flex;flex-wrap:wrap;gap:.5rem;margin:.75rem 0}
+  .badge{background:#f2f2f2;border-radius:999px;padding:.25rem .6rem;font-size:.85rem}
+  .spec{display:grid;grid-template-columns:1fr 1fr;gap:.5rem 1rem;margin:0}
+  .spec dt{font-weight:600}
+  .spec dd{margin:0 0 .4rem 0}
+  .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:.5rem}
+  .grid img{width:100%;height:auto;border-radius:8px}
+  @media(max-width:720px){.spec{grid-template-columns:1fr} .grid{grid-template-columns:1fr 1fr}}
+  .band{background:#fafafa;border:1px solid #eee;border-radius:8px;padding:.75rem;margin:1rem 0}
+</style>
 
-$( [ -n "$MAIN_PHOTO" ] && printf '![Main](%s)\n\n' "$MAIN_PHOTO" )
+# ${TITLE_FULL}
 
-${CATCH_LINE:+**${CATCH_LINE}**}
+<div class="hero">
+${MAIN_PHOTO:+<img src="${MAIN_PHOTO}" alt="${TITLE_FULL}">}
+</div>
 
-参考市場価格：${PRICE_LINE}
+${CATCH:+**${CATCH}**}
 
----
+<div class="band">
+<strong>参考市場価格：</strong>${PRICE_LINE}
+<div class="badges">
+  <span class="badge">${MATERIAL}</span>
+  <span class="badge">${WINDING:-—}</span>
+  <span class="badge">${ERA:-—}</span>
+  <span class="badge">${FUNCS}</span>
+</div>
+</div>
 
 ## 📋 スペック
-- ブランド：${BRAND}
-- モデル：${MODEL}
-- キャリバー：${CALIBER:-（未記入）}
-- 巻き上げ方式：${WINDING:-（未記入）}
-- ケース径：${CASE}mm
-- ラグ幅：${LUG:-（未記入）}mm
-- 素材：${MATERIAL}
-- 製造年代：${ERA:-（未記入）}
-- 機能：${FUNCS_LINE}
-
----
+<dl class="spec">
+  <dt>ブランド</dt><dd>${BRAND}</dd>
+  <dt>モデル</dt><dd>${MODEL}</dd>
+  <dt>キャリバー</dt><dd>${CALIBER:-（未記入）}</dd>
+  <dt>巻き上げ方式</dt><dd>${WINDING:-（未記入）}</dd>
+  <dt>ケース径</dt><dd>${CASE} mm</dd>
+  <dt>ラグ幅</dt><dd>${LUG:-—} mm</dd>
+  <dt>素材</dt><dd>${MATERIAL}</dd>
+  <dt>製造年代</dt><dd>${ERA:-（未記入）}</dd>
+  <dt>機能</dt><dd>${FUNCS}</dd>
+</dl>
 
 ## 📸 ギャラリー
-${GALLERY:-（画像は1枚のみ）}
-
----
+${GALLERY_HTML}
 
 ## 🎥 動画
 ${VIDEO_MD}
-${COND_BLOCK}
 
----
+${COND_BLOCK:+\n${COND_BLOCK}\n}
 
 ## 🗣 オーナーコメント
-> ${COMMENT:-（未記入）}
+> ${COMMENT}
 
+---
+**さらに詳しい研究ノート →** /blog/
+<br><br>
 展示者：${OWNER:-匿名}
 MD
 
-          # -------- posts/index.md 更新（先頭に追加）--------
+          # index を先頭更新
           idx="posts/index.md"
-          titleline="- [${BRAND} ${MODEL}](/${file})"
+          link="- [${TITLE_FULL}](/${file})"
+          mkdir -p posts
           if [ -f "$idx" ]; then
-            # 先頭に差し込み（重複防止）
-            grep -qF "$titleline" "$idx" || (printf "%s\n\n" "$titleline" | cat - "$idx" > "$idx.tmp" && mv "$idx.tmp" "$idx")
+            grep -qF "$link" "$idx" || (printf "%s\n\n" "$link" | cat - "$idx" > "$idx.tmp" && mv "$idx.tmp" "$idx")
           else
-            mkdir -p "posts"
-            printf "# 最新投稿\n\n%s\n" "$titleline" > "$idx"
+            printf "# 最新投稿\n\n%s\n" "$link" > "$idx"
           fi
 
-          # -------- commit & push --------
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add "$file" "$idx"
-          git commit -m "post: ${BRAND} ${MODEL} (${slug})" || true
+          git commit -m "post: ${TITLE_FULL}" || true
           git push
-
-      - name: Comment with link
-        env:
-          REPO: ${{ github.repository }}
-        run: |
-          url="https://raw.githubusercontent.com/${REPO}/main/posts/index.md"
-          echo "生成と一覧更新が完了しました: ${url}"
